--- a/html/index.html
+++ b/html/index.html
@@ -478,7 +478,7 @@
 	  <label for="about" class="close">&times;</label>
 	</header>
 	<section class="content">
-	  This ftduino32 firmware is based on various projects including:
+	  This <a href="https://github.com/harbaum/ftDuino32">ftDuino32 firmware</a> is based on various projects including:
 	  <ul>
 	    <li><a href="https://micropython.org/">Micropython</a></li>
 	    <li><a href="https://lvgl.io/">LVGL</a> and <a href="https://github.com/lvgl/lv_micropython">Micropython bindings</a></li>
