Suppress google listing

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./picnic.min.css" />
     <link rel="stylesheet" href="./style.css" />
     <meta name="description" content="ftDuino32 Controller">
+    <meta name="robots" content="noindex">
     <script src="./common.js"></script>
     <script src="./liveview.js"></script>
     <script src="./zlib_and_gzip.min.js"></script>    
