--- a/html/cm.html
+++ b/html/cm.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="robots" content="noindex">
     <title>ftDuino32 - Python</title>
     <link rel="stylesheet" href="./picnic.min.css" />
     <link rel="stylesheet" href="./style.css" />
